T Compiler/tests/phase3tests/error/bogusStatements.t
class A {
  int i;
}

int main()
{
  A a;
  int i;

  out a;

  if (a)
  {
    while (a)
    {

    }
  }
  else
  {
    i = 17;
  }

  out null;

  if (null)
  {
    while (null)
    {

    }
  }
  else
  {
    return null;
  }

  return a;
}
